# lys

./: CLAUDE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
crates/lys/: Cargo.toml
crates/lys-core/: Cargo.toml  README.md
crates/lys-core/src/: error.rs  lib.rs
crates/lys-core/src/attestation/: envelope.rs  mod.rs  sign.rs
crates/lys-core/src/ca/: authority.rs  authority_tests.rs  certificate.rs  certificate_tests.rs  extensions.rs  extensions_tests.rs  mod.rs
crates/lys-core/src/checkpoint/: body.rs  body_tests.rs  mod.rs  note.rs  note_tests.rs  verifier_key.rs  verifier_key_tests.rs
crates/lys-core/src/keys/: identity.rs  identity_tests.rs  mod.rs
crates/lys-core/src/merkle/: leaf.rs  mod.rs  proof.rs  proof_tests.rs  tree.rs  tree_tests.rs
crates/lys-core/src/seal/: authenticated.rs  mod.rs  sealed_envelope.rs
crates/lys-core/src/tlog/: artifact.rs  artifact_tests.rs  build.rs  build_tests.rs  mod.rs  verify.rs  verify_tests.rs
crates/lys-core/tests/: go_conformance.rs  signed_note_crosscheck.rs
crates/lys-core/tests/go-conformance/: go.mod  main.go
crates/lys/src/: cli.rs  main.rs
crates/lys/src/commands/: attest.rs  ca.rs  error.rs  files.rs  key.rs  mod.rs  seal.rs  verify.rs
crates/lys/src/commands/log/: append.rs  checkpoint.rs  init.rs  mod.rs  prove.rs  store.rs  verify.rs
crates/lys/tests/: cli_tests.rs  log_tests.rs
docs/: DESIGN.md  RELEASE-CHECKLIST.md  REVIEW-23-07.md  ROADMAP.md
docs/design/: WIRE-FORMATS.md
docs/design/lys-anchor/: STRAWMAN.md
docs/design/lys-core/: CHECKLIST.md  DESIGN.md  USER-STORIES.md
