[package]
name = "lys"
description = "Cryptographic trust infrastructure for AI agents — CLI for identity, attestation, transparency logs, and verification."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["cryptography", "transparency", "agents", "audit", "cli"]
categories = ["cryptography", "command-line-utilities"]

[[bin]]
name = "lys"
path = "src/main.rs"

[dependencies]
lys-core.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
